--- a/scss/_portfolio-section.scss
+++ b/scss/_portfolio-section.scss
@@ -129,7 +129,7 @@ hr.horizontal {
 
 .caption-title {
     text-align: center;
-    color: $white;
+    color: $white !important;
     font-size: 1.4rem;
     font-family: 'Slabo 13px', serif;
 }
